# BulletWalker

./: README.md  environment.yml  main.py  pyproject.toml
src/bulletwalker/: __init__.py  logging.py  simulator.py
src/bulletwalker/assets/urdfs/models/: ironcub.urdf  model.urdf
src/bulletwalker/assets/urdfs/terrains/: plane_terrain.urdf
src/bulletwalker/core/: simulator.py
src/bulletwalker/core/callbacks/: __init__.py  callbacks.py  scores.py
src/bulletwalker/core/math/: __init__.py  quaternion.py  utils.py
src/bulletwalker/core/models/: __init__.py  model.py  robot.py  terrain.py
src/bulletwalker/data/: contact_info.py  dynamics_info.py  joint_data.py  joint_info.py  joint_state.py  link_state.py  model_state.py  score_result.py  simulation_step.py
src/bulletwalker/managers/: resource_manager.py
src/bulletwalker/utils/: parsers.py
tests/: test_callbacks.py  test_models.py  test_quaternion.py  test_simulator.py
tmp_assets/: model.urdf
